--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,5 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
-
+remappings = ['@openzeppelin/=lib/openzeppelin-contracts/', '@chainlink/=lib/chainlink-brownie-contracts']
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
